maze.lessons.maze.island.IslandMaze.scala.error
Escaper:65: error: not enough arguments for method setPos: (x: Int, y: Int)Unit.
Unspecified value parameters x, y.
    setPos()
          ^